--- a/desktop-client/src/index.css
+++ b/desktop-client/src/index.css
@@ -7,10 +7,16 @@
   }
 }
 
-.fill-height-or-more > div {
-  flex: 1;
-
+.flex-parent {
   display: flex;
-  justify-content: center;
   flex-direction: column;
+}
+
+.flex-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-grow {
+  flex: 1;
 }
