--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -27,53 +27,10 @@ input {
 }
 /* [END] Remove borders from inputs and text areas */
 
-.marquee-container {
-  min-width: 20em;
-  position: relative;
-  overflow: hidden;
+/* [START]  Node Label */
+#node-label {
+  font-size: 1em;
+  overflow-wrap: break-word;
+  word-break: break-all;
 }
-
-.marquee {
-  position: absolute;
-  width: 20em;
-  height: 100%;
-  margin: 0;
-  text-align: center;
-  /* Starting position */
-  -moz-transform: translateX(100%);
-  -webkit-transform: translateX(100%);
-  transform: translateX(100%);
-  /* Apply animation to this element */
-  -moz-animation: marquee 5s linear infinite;
-  -webkit-animation: marquee 5s linear infinite;
-  animation: marquee 5s linear infinite;
-}
-/* Move it (define the animation) */
-@-moz-keyframes marquee {
-  0% {
-    -moz-transform: translateX(100%);
-  }
-  100% {
-    -moz-transform: translateX(-100%);
-  }
-}
-@-webkit-keyframes marquee {
-  0% {
-    -webkit-transform: translateX(100%);
-  }
-  100% {
-    -webkit-transform: translateX(-100%);
-  }
-}
-@keyframes marquee {
-  0% {
-    -moz-transform: translateX(100%); /* Firefox bug fix */
-    -webkit-transform: translateX(100%); /* Firefox bug fix */
-    transform: translateX(100%);
-  }
-  100% {
-    -moz-transform: translateX(-100%); /* Firefox bug fix */
-    -webkit-transform: translateX(-100%); /* Firefox bug fix */
-    transform: translateX(-100%);
-  }
-}
+/* [END] Node Label */
