--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -4,6 +4,33 @@ body {
   /* [END] Prevent scrolling on body */
 }
 
+/* [START] Colors */
+.accent {
+  color: #ff9e37;
+}
+
+.bg-accent {
+  background-color: #ff9e37;
+}
+
+.b--accent {
+  border-color: #ff9e37;
+}
+
+.base {
+  color: #111c77;
+}
+
+.bg-base {
+  background-color: #111c77;
+}
+
+.b--base {
+  border-color: #111c77;
+}
+
+/* [END] Colors */
+
 /* [START] Create a column that fills the page vertically */
 .flex-column {
   display: flex;
