making editor more usable

--- a/web-client/src/css/custom.css
+++ b/web-client/src/css/custom.css
@@ -64,3 +64,10 @@ input {
   word-break: break-all;
 }
 /* [END] Node Label */
+
+/* [START] Draft */
+.editor :global(.public-DraftEditor-content) {
+  max-height: 300px;
+  overflow: auto;
+}
+/* [END] Draft */
