--- a/chrome-extension/src/css/app.css
+++ b/chrome-extension/src/css/app.css
@@ -1,1 +1,58 @@
 @import "tachyons";
+
+/* [START] Colors */
+.accent {
+  color: #ff9e37;
+}
+
+.bg-accent {
+  background-color: #ff9e37;
+}
+
+.b--accent {
+  border-color: #ff9e37;
+}
+
+.base {
+  color: #111c77;
+}
+
+.bg-base {
+  background-color: #111c77;
+}
+
+.b--base {
+  border-color: #111c77;
+}
+
+.editor-gray {
+  color: #fefefe;
+}
+
+.bg-editor-gray {
+  background-color: #fefefe;
+}
+
+.b--editor-gray {
+  border-color: #fefefe;
+}
+/* [END] Colors */
+
+/* [START] Create a column that fills the page vertically */
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-no-shrink {
+  flex-shrink: 1 0 auto;
+}
+
+.flex-shrink {
+  flex-shrink: 1;
+}
+
+.flex-grow {
+  flex: 1;
+}
+/* [END] Create a column that fills the page vertically */
